Bug 322269 - Text in the Messages box If the UI is a RTL language is on the opposite side
Summary: Text in the Messages box If the UI is a RTL language is on the opposite side
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: ircview (other bugs)
Version First Reported In: 1.4
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: argonel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-12 08:47 UTC by Safa Alfulaij
Modified: 2014-05-17 04:40 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
UI language: RTL (91.03 KB, image/png)
2013-07-12 08:48 UTC, Safa Alfulaij
Details
UI language: LTR (119.78 KB, image/png)
2013-07-12 08:49 UTC, Safa Alfulaij
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Safa Alfulaij 2013-07-12 08:47:33 UTC
When the UI language is English (LTR), everything displayed good, the LTR text is aligin to the left, and the RTL text is aligin to the right.
But when the UI language is Arabic (RTL), the LTR text aligin to the right, and the RTL text align to the left.

Reproducible: Always
Comment 1 Safa Alfulaij 2013-07-12 08:48:25 UTC
Created attachment 81070 [details]
UI language: RTL
Comment 2 Safa Alfulaij 2013-07-12 08:49:06 UTC
Created attachment 81071 [details]
UI language: LTR
Comment 3 Eike Hein 2014-05-16 16:10:44 UTC
Git commit 88b6e51bb57ae6fde2bfdb446f818e9b31e41974 by Eike Hein.
Committed on 16/05/2014 at 16:10.
Pushed by hein into branch 'master'.

Don't reverse line alignment in RTL locales.

M  +0    -3    src/viewer/ircview.cpp

http://commits.kde.org/konversation/88b6e51bb57ae6fde2bfdb446f818e9b31e41974
Comment 4 Safa Alfulaij 2014-05-17 04:40:47 UTC
Thanks a lot, this edit solved the problem :)