Don't reverse line alignment in RTL locales.

BUG:322269